Core: Change code element background

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ html {
 
 body {
   --border-radius: 12px;
-  --color-bg-code: #fffbf3;
+  --color-bg-code: #f8f6fd;
   --color-bg-content: #fff;
   --color-bg: #f9f9f9;
   --color-border: rgba(0, 0, 0, 0.1);
