Core: Update background styles

--- a/src/styles/_code.scss
+++ b/src/styles/_code.scss
@@ -20,7 +20,7 @@ pre {
   margin-bottom: 2em !important;
   padding: calc(var(--gap) / 2) !important;
   border-radius: 0.2em;
-  background-color: var(--color-bg-code) !important;
+  background-color: var(--color-bg-code-block) !important;
   font-size: 0.8em !important;
 
   code {
