--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -33,10 +33,8 @@ img {
 .content-box {
   margin: 0 auto;
   padding: var(--gap);
-  background-color: var(--color-bg-content);
+  border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
-  box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.02),
-    1px 1px 15px 0 rgba(0, 0, 0, 0.03);
 
   @media print {
     padding: 0;
