--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@
   --color-bg: #fff;
   --color-border: rgba(0, 0, 0, 0.1);
   --color-link: #7648db;
+  --color-link-underline: rgba(118, 72, 219, 0.5);
   --color-selection: rgba(181, 139, 243, 0.25);
   --color-text: #333;
   --color-title: #111;
@@ -19,6 +20,7 @@
     --color-bg: #161b22;
     --color-border: rgba(255, 255, 255, 0.2);
     --color-link: #b58bf3;
+    --color-link-underline: rgba(181, 139, 243, 0.5);
     --color-text: #c9d1d9;
     --color-title: #eee;
   }
