--- a/src/styles/_code.scss
+++ b/src/styles/_code.scss
@@ -22,6 +22,7 @@ pre {
   font-size: 0.8em !important;
 
   code {
+    padding: 0;
     color: var(--color-text) !important;
     text-shadow: none !important;
   }
