Add image lightbox

--- a/src/components/AuthorAvatar.astro
+++ b/src/components/AuthorAvatar.astro
@@ -3,7 +3,7 @@ import author from '../assets/author.svg?raw'
 ---
 
 <div class="author-avatar">
-  <Fragment set:html={author} class="foo" />
+  <Fragment set:html={author} />
 </div>
 
 <style lang="scss">
