--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -33,7 +33,7 @@ const canonicalUrl = new URL(Astro.url.pathname, Astro.site)
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 
-<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:card" content="summary" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
