--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection } from 'astro:content'
+import { getCollection, render } from 'astro:content'
 
 import BaseHead from '../components/BaseHead.astro'
 import Footer from '../components/Footer.astro'
@@ -9,7 +9,7 @@ const projects = await Promise.all(
   (await getCollection('projects'))
     .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
     .map(async (project) => {
-      const { Content } = await project.render()
+      const { Content } = await render(project)
       return { ...project, Content }
     })
 )
