--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -1,11 +1,11 @@
 ---
-import { getCollection, type CollectionEntry } from 'astro:content'
+import { getCollection, render, type CollectionEntry } from 'astro:content'
 
 import BaseLayout from '../../layouts/BaseLayout.astro'
 
 export const getStaticPaths = async () => {
   return (await getCollection('posts')).map((post) => ({
-    params: { slug: post.slug },
+    params: { id: post.id },
     props: post,
   }))
 }
@@ -14,7 +14,7 @@ type Props = CollectionEntry<'posts'>
 
 const post = Astro.props
 
-const { Content } = await post.render()
+const { Content } = await render(post)
 ---
 
 <BaseLayout {...post.data}>
