Fix image zooming

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,6 +27,7 @@ import HeaderLink from './HeaderLink.astro'
     border-bottom: 2px solid rgb(var(--color-text));
     background-color: rgb(var(--color-background));
     user-select: none;
+    z-index: 10;
   }
 
   nav {
