--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -22,10 +22,11 @@ const { Content } = await render(post)
 </BaseLayout>
 
 <script>
-  import mediumZoom from 'medium-zoom'
-
-  mediumZoom('article img', {
-    background: undefined,
-    scrollOffset: 0,
+  import mediumZoom from 'medium-zoom/dist/pure'
+  document.addEventListener('astro:page-load', () => {
+    mediumZoom(document.querySelectorAll('article img'), {
+      background: undefined,
+      scrollOffset: 0,
+    })
   })
 </script>
