Add font preloading

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,7 @@
 ---
 import { ClientRouter } from 'astro:transitions'
+import notoSans400 from '@fontsource/noto-sans/files/noto-sans-latin-400-normal.woff2?url'
+import notoSans700 from '@fontsource/noto-sans/files/noto-sans-latin-700-normal.woff2?url'
 
 import '../styles/global.scss'
 
@@ -21,6 +23,22 @@ const canonicalUrl = new URL(Astro.url.pathname, Astro.site)
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <meta name="generator" content={Astro.generator} />
+
+<link
+  rel="preload"
+  as="font"
+  type="font/woff2"
+  href={notoSans400}
+  crossorigin
+/>
+
+<link
+  rel="preload"
+  as="font"
+  type="font/woff2"
+  href={notoSans700}
+  crossorigin
+/>
 
 <link rel="canonical" href={canonicalUrl} />
 
